fix: lower film grain z-index to not block vehicle hover

--- a/app/globals.css
+++ b/app/globals.css
@@ -64,7 +64,7 @@ body::after {
   inset: -50%;
   width: 200%; height: 200%;
   pointer-events: none;
-  z-index: 9999;
+  z-index: 1;
   opacity: 0.038;
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='200'><filter id='n'><feTurbulence type='fractalNoise' baseFrequency='0.75' numOctaves='4' stitchTiles='stitch'/></filter><rect width='200' height='200' filter='url(%23n)'/></svg>");
   background-size: 200px 200px;
